metadata/sf-prod/force-app/main/default/objects/workspan__AqDataPurgeSetting__c/workspan__AqDataPurgeSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration object for data retention job.</description>
    <label>Data Purge Setting</label>
</CustomObject>