metadata/sf-prod/force-app/main/default/objects/workspan__AqDataPurgeSetting__c/fields/workspan__FieldToMarkObfuscation__c.field-meta.xml
<CustomField>
    <fullName>workspan__FieldToMarkObfuscation__c</fullName>
    <description>Full api name of the checkbox field that is set to true when record obfuscated.</description>
    <label>Obfuscation Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>