metadata/sf-prod/force-app/main/default/objects/workspan__AqDataPurgeSetting__c/fields/workspan__IsObfuscationMode__c.field-meta.xml
<CustomField>
    <fullName>workspan__IsObfuscationMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable for obfuscation of data instead of deletion.</description>
    <label>Obfuscation Mode</label>
    <type>Checkbox</type>
</CustomField>