metadata/sf-prod/force-app/main/default/objects/workspan__AqDataPurgeSetting__c/fields/workspan__ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>workspan__ObjectApiName__c</fullName>
    <description>Full api name of object.</description>
    <label>Full API Name of the Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>