metadata/sf-prod/force-app/main/default/objects/workspan__AqDataPurgeSetting__c/fields/workspan__Priority__c.field-meta.xml
<CustomField>
    <fullName>workspan__Priority__c</fullName>
    <description>Used to set a priority of a particular setting - less number means higher priority.</description>
    <label>Priority Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>