metadata/sf-prod/force-app/main/default/objects/workspan__AqDataPurgeSetting__c/fields/workspan__RetentionPeriod__c.field-meta.xml
<CustomField>
    <fullName>workspan__RetentionPeriod__c</fullName>
    <description>Retention Period (days)</description>
    <label>Retention Period (days)</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>