metadata/sf-prod/force-app/main/default/objects/workspan__AqDataPurgeSetting__c/fields/workspan__ScopeSize__c.field-meta.xml
<CustomField>
    <fullName>workspan__ScopeSize__c</fullName>
    <description>Scope Size of the Batch. (number of records processed in a single context)</description>
    <label>Scope Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>