metadata/sf-prod/force-app/main/default/objects/workspan__AqDataPurgeSetting__c/listViews/workspan__All.listView-meta.xml
<ListView>
    <fullName>workspan__All</fullName>
    <columns>NAME</columns>
    <columns>workspan__Priority__c</columns>
    <columns>workspan__ObjectApiName__c</columns>
    <columns>workspan__RetentionPeriod__c</columns>
    <columns>workspan__IsObfuscationMode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>